# ndlm

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
src/: buffer.rs  canvas.rs  color.rs  config.rs  draw.rs  drm_backend.rs  error.rs  framebuffer_backend.rs  graphics_backend.rs  greetd.rs  keyboard.rs  main.rs  manager.rs  p5.rs
src/manager/: tests.rs
