[package]
name = "ndlm"
version = "0.1.0"
authors = [
  "Balint Csergo <ohai@deathowl.com>",
  "Ivan Dimitrov <ivan@idimitrov.dev>"
]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.21.5"
drm = "0.14.1"
drm-fourcc = "2.2.0"
greetd_ipc = { version = "0.10.3", features = ["sync-codec"] }
libc = "0.2.181"
pango = "0.21.5"
pangocairo = "0.21.5"
termion = "4.0.6"
thiserror = "2.0.18"
